--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header class="header">
       <div class="header_logo">
         <a href="https://www.docomo.ne.jp/">
-          <img src="/special_contents/kokusai/docomo_kokusai/images/logo.svg" width="148" height="52" alt="つなごう。驚きを。幸せを。NTT docomo">
+          <img src="/special_contents/kokusai/docomo_kokusai/images/logo.svg" width="148" height="52" loading="lazy" decode="async" alt="つなごう。驚きを。幸せを。NTT docomo">
         </a>
     </div>
     </header>
@@ -52,7 +52,7 @@
         <div class="l_container">
           <picture>
             <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_01_sp.jpg" width="768" height="1382">
-            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_01.jpg" width="2880" height="1834" alt="ドコモのスマホは海外でもそのまま使える!ニーズに合わせた料金プランや定額オプションが充実!" class="c_img_cover">
+            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_01.jpg" width="1400" height="918" loading="lazy" decode="async" alt="ドコモのスマホは海外でもそのまま使える!ニーズに合わせた料金プランや定額オプションが充実!" class="c_img_cover">
           </picture>
         </div>
       </div>
@@ -61,7 +61,7 @@
         <a href="#">
           <picture>
             <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_02_sp.png" width="750" height="283">
-            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_02.png" width="1200" height="480" loading="lazy" alt="ポイント 海外データ通信で トクしMAX!" class="c_img_cover">
+            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_02.png" width="1200" height="480" loading="lazy" decode="async" alt="ポイント 海外データ通信で トクしMAX!" class="c_img_cover">
           </picture>
         </a>
       </div>
@@ -81,33 +81,35 @@
 
             <div class="tab_button_wrap">
               <button class="tab_button is-01 active" data-tab="tab1">
-                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_01.png" width="228" height="70" loading="lazy" alt="ドコモMAXドコモポイ活MAX">
+                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_01.svg" width="228" height="70" loading="lazy" decode="async" alt="ドコモMAXドコモポイ活MAX">
               </button>
               <button class="tab_button is-02" data-tab="tab2">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_02_sp.png" width="97" height="69">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_02.png" width="212" height="105" loading="lazy" alt="オンライン専用プランahamo">
+                  <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_02_sp.svg" width="97" height="69">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_02.svg" width="212" height="105" loading="lazy" decode="async" alt="オンライン専用プランahamo">
                 </picture>
               </button>
               <button class="tab_button is-03" data-tab="tab3">
-                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_03.png" width="471" height="154" loading="lazy" alt="世界そのままギカ">
+                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_03.png" width="471" height="154" loading="lazy" decode="async" alt="世界そのままギカ">
               </button>
             </div>
   
             <div id="tab1" class="tab_content active">
               <div class="tab_content_01">
                 <div class="js-anima-up main_image">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" class="icon icon_01" alt="">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_02.svg" width="199" height="240" loading="lazy" class="icon icon_02" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" decode="async" class="icon icon_01" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_02.svg" width="199" height="240" loading="lazy" decode="async" class="icon icon_02" alt="">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01_sp.jpg" width="708" height="2132">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01.jpg" width="1239" height="793" loading="lazy" alt="ドコモ MAX/ドコモ ポイ活 MAXは">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01.jpg" width="1239" height="793" loading="lazy" decode="async" alt="ドコモ MAX/ドコモポイ活 MAXは200以上の国・地域で海外データ通信が無料だからオトクだね">
                   </picture>
                   <div class="js-anima-up main_image_desc">
                     <p class="txt txt_01">
                       <span>※1</span>
-                      ・海外で利用したデータ量が、国内利用分と合わせて当月のご利用可能なデータ量を超えた場合、国内同様に当月末までの通信速度が低下します。また海外で利用したデータ量が30GBを超過すると、海外での通信速度は当月末まで送受信時最大1Mbpsとなります。（＊1）<br>
-                      ・海外で最初にデータ通信を利用した日（日本時間）を起算日として15日経過後の日本時間0時以降に、海外での通信速度が送受信時最大128kbpsとなります。本速度制限は、月間データ容量を追加購入しても、日本に帰国しデータ通信を行うまで解除されません。（＊1）
+                      <span class="txt_sub_wrap">
+                        <span class="txt_sub"><span>・</span>海外で利用したデータ量が、国内利用分と合わせて当月のご利用可能なデータ量を超えた場合、国内同様に当月末までの通信速度が低下します。また海外で利用したデータ量が30GBを超過すると、海外での通信速度は当月末まで送受信時最大1Mbpsとなります。（＊1）</span>
+                        <span class="txt_sub"><span>・</span>海外で最初にデータ通信を利用した日（日本時間）を起算日として15日経過後の日本時間0時以降に、海外での通信速度が送受信時最大128kbpsとなります。本速度制限は、月間データ容量を追加購入しても、日本に帰国しデータ通信を行うまで解除されません。（＊1）</span>
+                      </span>
                     </p>
                     <p class="txt txt_02 sp">
                       <span>＊1</span>
@@ -129,16 +131,16 @@
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_03.svg" width="202" height="235" loading="lazy" class="icon icon_03" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_03.svg" width="202" height="235" loading="lazy" decode="async" class="icon icon_03" alt="">
                   <div class="box_fee">
                     <div class="box_fee_item is-red">
                       <div class="js-anima-up logo">
-                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_02.png" width="304" height="54" loading="lazy" class="c_w_100" alt="ドコモMAX">
+                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_02.svg" width="304" height="54" loading="lazy" decode="async" class="c_w_100" alt="ドコモMAX">
                       </div>
                       <div class="js-anima-up price_package">
                         <p class="title">基本料金</p>
@@ -218,7 +220,7 @@
                     </div>
                     <div class="box_fee_item is-gold">
                       <div class="js-anima-up logo">
-                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_03.png" width="450" height="56" loading="lazy" class="c_w_100" alt="ドコモポイ活MAX">
+                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_03.svg" width="450" height="56" loading="lazy" decode="async" class="c_w_100" alt="ドコモポイ活MAX">
                       </div>
                       <div class="js-anima-up price_package is-one-col">
                         <p class="title">基本料金</p>
@@ -296,7 +298,7 @@
                     <div class="list">
                       <div class="js-anima-up item item_01">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.png" width="36" height="36" loading="lazy" alt="DAZN（追加有料コンテンツは除く）が">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.png" width="36" height="36" loading="lazy" decode="async" alt="DAZN（追加有料コンテンツは除く）が">
                         </div>
                         <div class="text">
                           <p class="txt-small"><span class="txt1">DAZN</span>（追加有料コンテンツは除く）<span class="txt2">が</span></span></p>
@@ -305,7 +307,7 @@
                       </div>
                       <div class="js-anima-up item item_02">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.png" width="144" height="31" loading="lazy" alt="ドコモからAmazonプライムご登録で、">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.png" width="144" height="31" loading="lazy" decode="async" alt="ドコモからAmazonプライムご登録で、">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモからAmazonプライムご登録で、</p>
@@ -315,7 +317,7 @@
                       </div>
                       <div class="js-anima-up item item_03">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.png" width="50" height="39" loading="lazy" alt="ドコモを長くご利用の方はおトク！">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.png" width="50" height="39" loading="lazy" decode="async" alt="ドコモを長くご利用の方はおトク！">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモを長くご利用の方は</p>
@@ -339,13 +341,13 @@
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_04.svg" width="219" height="205" loading="lazy" class="icon icon_04" alt="">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_05.svg" width="280" height="238" loading="lazy" class="icon icon_05" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_04.svg" width="219" height="205" loading="lazy" decode="async" class="icon icon_04" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_05.svg" width="280" height="238" loading="lazy" decode="async" class="icon icon_05" alt="">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
@@ -371,7 +373,7 @@
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_01.svg" width="319" height="181" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_02.svg" width="178" height="247" loading="lazy" alt="">
                   <picture>
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01.jpg" width="1239" height="791" loading="lazy" alt="ahamoは">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01.jpg" width="1239" height="791" loading="lazy" decode="async" alt="ahamoは91の国・地域で海外データ通信が無料だからオトクだね">
                   </picture>
                   <div class="js-anima-up main_image_desc">
                     <p class="txt">
@@ -384,8 +386,8 @@
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
@@ -412,7 +414,7 @@
                         <img class="icon icon_05" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_05.svg" width="260" height="235" loading="lazy" alt="">
                         <img class="icon icon_06" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_06.svg" width="300" height="233" loading="lazy" alt="">
                         <p class="title">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" alt="じゃんじゃん使いたい方は ahamo大盛り">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" decode="async" alt="じゃんじゃん使いたい方は ahamo大盛り">
                         </p>
                         <div class="capacity">
                           <p class="number">110<span class="f_roboto">GB</span></p>
@@ -421,7 +423,7 @@
                         <div class="detail_fee">
                           <div class="item item_01">
                             <p class="logo">
-                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_02.svg" width="80" height="30" loading="lazy" alt="ahamo">
+                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_02.svg" width="80" height="30" loading="lazy" decode="async" alt="ahamo">
                             </p>
                             <div class="cap">
                               <p class="num"><span class="f_roboto">30</span>GB</p>
@@ -436,7 +438,7 @@
                           </span>
                           <div class="item item_02">
                             <p class="logo">
-                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_03.svg" width="146" height="14" loading="lazy" alt="ahamo">
+                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_03.svg" width="146" height="14" loading="lazy" decode="async" alt="ahamo">
                             </p>
                             <div class="cap">
                               <p class="num"><span class="f_roboto">60</span>GB</p>
@@ -451,8 +453,8 @@
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
@@ -473,13 +475,13 @@
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_01.svg" width="295" height="288" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_02.svg" width="185" height="267" loading="lazy" alt="">
                   <picture>
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" alt="ドコモ MAX／ドコモ ポイ活 MAX ／ahamo以外でも">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" decode="async" alt="ドコモ MAX/ドコモポイ活 MAX/ahamo以外でも日本で契約しているプランのデータ量を海外でも使えるので便利!">
                   </picture>
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
@@ -525,8 +527,8 @@
                 </div>
                 <div class="img_line">
                   <picture>
-                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.png" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.png" width="1240" height="20" loading="lazy" alt="">
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decode="async" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
