--- a/index.html
+++ b/index.html
@@ -352,13 +352,13 @@
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
                       <div class="button_list">
-                        <a href="#" class="button is-blue">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
-                        <a href="#" class="button is-blue">機種を一緒に購入する</a>
+                        <a href="#" class="c-button01 button is-blue">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
+                        <a href="#" class="c-button01 button is-blue">機種を一緒に購入する</a>
                       </div>
                     </div>
                     <div class="js-anima-up button_col">
                       <p class="button_title is-red">ドコモを契約中の方</p>
-                      <a href="#" class="button is-red">プラン変更へ進む</a>
+                      <a href="#" class="c-button01 button is-red">プラン変更へ進む</a>
                     </div>
                   </div>
                   <div class="js-anima-up button_note">
@@ -373,6 +373,7 @@
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_01.svg" width="319" height="181" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_02.svg" width="178" height="247" loading="lazy" alt="">
                   <picture>
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01_sp.jpg" width="708" height="2132">
                     <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01.jpg" width="1239" height="791" loading="lazy" decode="async" alt="ahamoは91の国・地域で海外データ通信が無料だからオトクだね">
                   </picture>
                   <div class="js-anima-up main_image_desc">
@@ -391,9 +392,16 @@
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
+                  <img class="icon icon_03" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_03.svg" width="322" height="214" loading="lazy" alt="">
+                  <img class="icon icon_04" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_04.svg" width="234" height="198" loading="lazy" alt="">
+                  <img class="icon icon_05" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_05.svg" width="260" height="235" loading="lazy" alt="">
+                  <img class="icon icon_06" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_06.svg" width="300" height="233" loading="lazy" alt="">
                   <div class="box_fee">
                     <div class="js-anima-up basic_fee">
-                      <img class="img_admin_fee" src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_admin_fee.svg" width="182" height="190" loading="lazy" alt="事務手数料">
+                      <picture>
+                        <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab2_img_admin_fee_sp.svg" width="132" height="138">
+                        <img class="img_admin_fee" src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_admin_fee.svg" width="182" height="190" loading="lazy" alt="事務手数料">
+                      </picture>
                       <p class="title">基本料金</p>
                       <div class="content">
                         <div class="capacity">
@@ -405,16 +413,15 @@
                     </div>
                     <div class="ahamo_fee">
                       <div class="js-anima-up heading">
-                        <p class="head"><span class="f_roboto txt_blue">5分以内</span>の国内通話<span class="f_roboto txt_blue">何回でも無料</span><span class="dot">※</span></p>
+                        <p class="head"><span class="f_roboto txt_blue">5</span><span class="txt_blue">分以内</span>の国内通話<span class="txt_blue">何回でも無料</span><span class="dot">※</span></p>
                         <p class="note">※５分超過後22円/30秒 対象外通話有</p>
                       </div>
                       <div class="js-anima-up content">
-                        <img class="icon icon_03" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_03.svg" width="322" height="214" loading="lazy" alt="">
-                        <img class="icon icon_04" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_04.svg" width="234" height="198" loading="lazy" alt="">
-                        <img class="icon icon_05" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_05.svg" width="260" height="235" loading="lazy" alt="">
-                        <img class="icon icon_06" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_06.svg" width="300" height="233" loading="lazy" alt="">
                         <p class="title">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" decode="async" alt="じゃんじゃん使いたい方は ahamo大盛り">
+                          <picture>
+                            <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01_sp.svg" width="372" height="161">
+                            <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" decode="async" alt="じゃんじゃん使いたい方は ahamo大盛り">
+                          </picture>
                         </p>
                         <div class="capacity">
                           <p class="number">110<span class="f_roboto">GB</span></p>
@@ -446,7 +453,8 @@
                             </div>
                           </div>
                         </div>
-                        <p class="note">※機種代金が別途かかります。<br>※大盛りオプション加入の場合でも海外利用時のデータ容量は30GBまで</p>
+                        <p class="note">※機種代金が別途かかります。<br>
+                          ※大盛りオプション加入の場合でも<br class="sp">海外利用時のデータ容量は30GBまで</p>
                       </div>
                     </div>
                   </div>
@@ -460,10 +468,10 @@
                 <div class="box_footer">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
-                      <a href="#" class="button is-blue">詳細はこちら</a>
+                      <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
                     </div>
                     <div class="js-anima-up button_col">
-                      <a href="#" class="button is-red">お申込みはこちら</a>
+                      <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
                     </div>
                   </div>
                 </div>
@@ -475,6 +483,7 @@
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_01.svg" width="295" height="288" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_02.svg" width="185" height="267" loading="lazy" alt="">
                   <picture>
+                    <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01_sp.jpg" width="708" height="2132">
                     <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" decode="async" alt="ドコモ MAX/ドコモポイ活 MAX/ahamo以外でも日本で契約しているプランのデータ量を海外でも使えるので便利!">
                   </picture>
                 </div>
@@ -520,8 +529,8 @@
                       </div>
                     </div>
                     <p class="js-anima-up note">
-                      ※利用期間1時間、24時間は「通常プラン」のみ対象の国・地域でもご利用になれます。<br>
-                      ※対象国・地域について詳しくは<a href="#">「ドコモのホームページ」</a>でご確認ください。
+                      ※利用期間1時間、24時間は「通常プラン」のみ<br class="sp">対象の国・地域でもご利用になれます。<br>
+                      ※対象国・地域について詳しくは<br class="sp"><a href="#">「ドコモのホームページ」</a>でご確認ください。
                     </p>
                   </div>
                 </div>
@@ -534,10 +543,10 @@
                 <div class="box_footer">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
-                      <a href="#" class="button is-blue">詳細はこちら</a>
+                      <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
                     </div>
                     <div class="js-anima-up button_col">
-                      <a href="#" class="button is-red">お申込みはこちら</a>
+                      <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
                     </div>
                   </div>
                   <div class="js-anima-up button_note">
@@ -545,15 +554,15 @@
                       <span>※</span>
                       日本でご契約中のデータ量を超過した場合、国内同様に当月末までの通信速度が制限されます。<br>
                       なお、国内同様のお手続き（「1GB追加オプション」など）を行うと、通常速度でご利用になれます。<br>
-                      また、「世界そのままギガ」の月間利用データ量が30GBを超過した場合（「5Gデータプラス」「データプラス」を<br>
+                      また、「世界そのままギガ」の月間利用データ量が30GBを超過した場合（「5Gデータプラス」「データプラス」を<br class="pc">
                       ご契約中の場合はペアとなる回線との合算）、当月末まで「世界そのままギガ」ご利用時の通信速度が制限されます。
                     </p>
                     <p class="txt">
                       <span>※</span>
-                      30GB超過後の通信速度は、ご契約中の料金プランにより異なります（「ドコモ MAX」「ドコモ ポイ活 MAX」「ドコモ ポイ活 20」<br>
+                      30GB超過後の通信速度は、ご契約中の料金プランにより異なります（「ドコモ MAX」「ドコモ ポイ活 MAX」「ドコモ ポイ活 20」<br class="pc">
                       「eximo」「eximo ポイ活」「5Gギガホ プレミア」「ギガホ プレミア」「5Gギガホ」:送受信時最大1Mbps／「irumo（3GB）」<br>
-                      「irumo（6GB）」「irumo（9GB）」送受信時最大：300kbps／「ドコモ mini」「irumo（0.5GB）」「5Gギガライト」<br>
-                      「はじめてスマホプラン」「U15はじめてスマホプラン」:送受信時最⼤128kbps／「5Gデータプラス」「データプラス」<br>
+                      「irumo（6GB）」「irumo（9GB）」送受信時最大：300kbps／「ドコモ mini」「irumo（0.5GB）」「5Gギガライト」<br class="pc">
+                      「はじめてスマホプラン」「U15はじめてスマホプラン」:送受信時最⼤128kbps／「5Gデータプラス」「データプラス」<br class="pc">
                       :ペアとなる回線に準じる）。
                     </p>
                     <p class="txt">
@@ -565,7 +574,10 @@
                 <div class="js-anima-up box_banner">
                   <div class="banner">
                     <a href="#">
-                      <img class="c_w_100" src="/special_contents/kokusai/docomo_kokusai/images/tab3_banner_01.png" width="660" height="182" loading="lazy" alt="データ量を気にせずとことん使える世界ギガし放題詳しくはこちら">
+                      <picture>
+                        <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_banner_01_sp.png" width="703" height="284">
+                        <img class="c_w_100" src="/special_contents/kokusai/docomo_kokusai/images/tab3_banner_01.png" width="660" height="182" loading="lazy" alt="データ量を気にせずとことん使える世界ギガし放題詳しくはこちら">
+                      </picture>
                     </a>
                   </div>
                 </div>
@@ -588,40 +600,45 @@
       </div>
     </footer>
 
-    <aside id="navi01" class="navi_under active">
+    <aside id="navi01" class="navi_under is-01 active">
       <div class="navi_under_wrap">
-        <div class="buttons">
-          <div class="button is-blue">
-            <a href="#" class="link">機種を一緒に購入する</a>
+        <div class="button_wrap">
+          <div class="button_col">
+            <p class="button_title is-blue">新たにドコモを契約する方</p>
+            <div class="button_list">
+              <a href="#" class="c-button01 button is-blue">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
+              <a href="#" class="c-button01 button is-blue">機種を一緒に<br class="sp">購入する</a>
+            </div>
           </div>
-          <div class="button is-red">
-            <a href="#" class="link">プラン変更へ進む</a>
+          <div class="button_col">
+            <p class="button_title is-red">ドコモを契約中の方</p>
+            <a href="#" class="c-button01 button is-red">プラン変更<br class="sp">へ進む</a>
           </div>
         </div>
       </div>
     </aside>
 
-    <aside id="navi02" class="navi_under">
+    <aside id="navi02" class="navi_under is-02">
       <div class="navi_under_wrap">
-        <div class="buttons">
-          <div class="button is-blue">
-            <a href="#" class="link">機種を一緒に購入する2</a>
+        <div class="button_wrap">
+          <div class="button_col">
+            <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
           </div>
-          <div class="button is-red">
-            <a href="#" class="link">プラン変更へ進む2</a>
+          <div class="button_col">
+            <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
           </div>
         </div>
       </div>
     </aside>
     
-    <aside id="navi03" class="navi_under">
+    <aside id="navi03" class="navi_under  is-03">
       <div class="navi_under_wrap">
-        <div class="buttons">
-          <div class="button is-blue">
-            <a href="#" class="link">機種を一緒に購入する3</a>
+        <div class="button_wrap">
+          <div class="button_col">
+            <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
           </div>
-          <div class="button is-red">
-            <a href="#" class="link">プラン変更へ進む3</a>
+          <div class="button_col">
+            <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
           </div>
         </div>
       </div>
