--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PWJ9PT');</script>
     <!-- End Google Tag Manager -->
-    <meta http-equiv="content-language" content="ja">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -298,16 +297,16 @@
                     <div class="list">
                       <div class="js-anima-up item item_01">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.png" width="36" height="36" loading="lazy" decoding="async" alt="DAZN（追加有料コンテンツは除く）が">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.svg" class="c_w_100" width="36" height="36" loading="lazy" decoding="async" alt="DAZN（追加有料コンテンツは除く）が">
                         </div>
                         <div class="text">
-                          <p class="txt-small"><span class="txt1">DAZN</span>（追加有料コンテンツは除く）<span class="txt2">が</span></span></p>
+                          <p class="txt-small"><span class="txt1">DAZN</span>（追加有料コンテンツは除く）<span class="txt2">が</span></p>
                           <p class="txt-big">追加料金なしで見放題！</p>
                         </div>
                       </div>
                       <div class="js-anima-up item item_02">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.png" width="144" height="31" loading="lazy" decoding="async" alt="ドコモからAmazonプライムご登録で、">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.svg" class="c_w_100" width="144" height="31" loading="lazy" decoding="async" alt="ドコモからAmazonプライムご登録で、">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモからAmazonプライムご登録で、</p>
@@ -317,7 +316,7 @@
                       </div>
                       <div class="js-anima-up item item_03">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.png" width="50" height="39" loading="lazy" decoding="async" alt="ドコモを長くご利用の方はおトク！">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.svg" class="c_w_100" width="50" height="39" loading="lazy" decoding="async" alt="ドコモを長くご利用の方はおトク！">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモを長くご利用の方は</p>
