--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="preload" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="/special_contents/kokusai/docomo_kokusai/css/common.css">
-    <script src="/special_contents/kokusai/docomo_kokusai/js/libs.js" defer></script>
     <script src="/special_contents/kokusai/docomo_kokusai/js/home.js" defer></script>
   </head>
   <body>
@@ -41,7 +40,7 @@
     <header class="header">
       <div class="header_logo">
         <a href="https://www.docomo.ne.jp/">
-          <img src="/special_contents/kokusai/docomo_kokusai/images/logo.svg" width="148" height="52" loading="lazy" decoding="async" alt="つなごう。驚きを。幸せを。NTT docomo">
+          <img src="/special_contents/kokusai/docomo_kokusai/images/logo.svg" width="148" height="52" alt="つなごう。驚きを。幸せを。NTT docomo">
         </a>
     </div>
     </header>
@@ -50,8 +49,8 @@
       <div class="sec_mv">
         <div class="l_container">
           <picture>
-            <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_01_sp.jpg" width="768" height="1382">
-            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_01.jpg" width="1400" height="918" loading="lazy" decoding="async" alt="ドコモのスマホは海外でもそのまま使える!ニーズに合わせた料金プランや定額オプションが充実!" class="c_img_cover">
+            <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_01_sp.webp" width="768" height="1382">
+            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_01.webp" width="1400" height="918" alt="ドコモのスマホは海外でもそのまま使える!ニーズに合わせた料金プランや定額オプションが充実!" class="c_img_cover">
           </picture>
         </div>
       </div>
@@ -60,7 +59,7 @@
         <a href="#">
           <picture>
             <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_02_sp.png" width="750" height="283">
-            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_02.png" width="1200" height="480" loading="lazy" decoding="async" alt="ポイント 海外データ通信で トクしMAX!" class="c_img_cover">
+            <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_02.png" width="1200" height="480" loading="lazy" alt="ポイント 海外データ通信で トクしMAX!" class="c_img_cover">
           </picture>
         </a>
       </div>
@@ -80,27 +79,27 @@
 
             <div class="tab_button_wrap">
               <button class="tab_button is-01 active" data-tab="tab1">
-                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_01.svg" width="228" height="70" loading="lazy" decoding="async" alt="ドコモMAXドコモポイ活MAX">
+                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_01.svg" width="228" height="70" loading="lazy" alt="ドコモMAXドコモポイ活MAX">
               </button>
               <button class="tab_button is-02" data-tab="tab2">
                 <picture>
                   <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_02_sp.svg" width="97" height="69">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_02.svg" width="212" height="105" loading="lazy" decoding="async" alt="オンライン専用プランahamo">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_02.svg" width="212" height="105" loading="lazy" alt="オンライン専用プランahamo">
                 </picture>
               </button>
               <button class="tab_button is-03" data-tab="tab3">
-                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_03.png" width="471" height="154" loading="lazy" decoding="async" alt="世界そのままギカ">
+                <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_03.png" width="471" height="154" loading="lazy" alt="世界そのままギカ">
               </button>
             </div>
   
             <div id="tab1" class="tab_content active">
               <div class="tab_content_01">
                 <div class="js-anima-up main_image">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" decoding="async" class="icon icon_01" alt="">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_02.svg" width="199" height="240" loading="lazy" decoding="async" class="icon icon_02" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" class="icon icon_01" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_02.svg" width="199" height="240" loading="lazy" class="icon icon_02" alt="">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01_sp.jpg" width="708" height="2132">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01.jpg" width="1239" height="793" loading="lazy" decoding="async" alt="ドコモ MAX/ドコモポイ活 MAXは200以上の国・地域で海外データ通信が無料だからオトクだね">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_01.jpg" width="1239" height="793" loading="lazy" alt="ドコモ MAX/ドコモポイ活 MAXは200以上の国・地域で海外データ通信が無料だからオトクだね">
                   </picture>
                   <div class="js-anima-up main_image_desc">
                     <p class="txt txt_01">
@@ -131,15 +130,15 @@
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_03.svg" width="202" height="235" loading="lazy" decoding="async" class="icon icon_03" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_03.svg" width="202" height="235" loading="lazy" class="icon icon_03" alt="">
                   <div class="box_fee">
                     <div class="box_fee_item is-red">
                       <div class="js-anima-up logo">
-                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_02.svg" width="304" height="54" loading="lazy" decoding="async" class="c_w_100" alt="ドコモMAX">
+                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_02.svg" width="304" height="54" loading="lazy" class="c_w_100" alt="ドコモMAX">
                       </div>
                       <div class="js-anima-up price_package">
                         <p class="title">基本料金</p>
@@ -219,7 +218,7 @@
                     </div>
                     <div class="box_fee_item is-gold">
                       <div class="js-anima-up logo">
-                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_03.svg" width="450" height="56" loading="lazy" decoding="async" class="c_w_100" alt="ドコモポイ活MAX">
+                        <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_03.svg" width="450" height="56" loading="lazy" class="c_w_100" alt="ドコモポイ活MAX">
                       </div>
                       <div class="js-anima-up price_package is-one-col">
                         <p class="title">基本料金</p>
@@ -297,7 +296,7 @@
                     <div class="list">
                       <div class="js-anima-up item item_01">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.svg" class="c_w_100" width="36" height="36" loading="lazy" decoding="async" alt="DAZN（追加有料コンテンツは除く）が">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_01.svg" class="c_w_100" width="36" height="36" loading="lazy" alt="DAZN（追加有料コンテンツは除く）が">
                         </div>
                         <div class="text">
                           <p class="txt-small"><span class="txt1">DAZN</span>（追加有料コンテンツは除く）<span class="txt2">が</span></p>
@@ -306,7 +305,7 @@
                       </div>
                       <div class="js-anima-up item item_02">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.svg" class="c_w_100" width="144" height="31" loading="lazy" decoding="async" alt="ドコモからAmazonプライムご登録で、">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_02.svg" class="c_w_100" width="144" height="31" loading="lazy" alt="ドコモからAmazonプライムご登録で、">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモからAmazonプライムご登録で、</p>
@@ -316,7 +315,7 @@
                       </div>
                       <div class="js-anima-up item item_03">
                         <div class="image">
-                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.svg" class="c_w_100" width="50" height="39" loading="lazy" decoding="async" alt="ドコモを長くご利用の方はおトク！">
+                          <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_logo_03.svg" class="c_w_100" width="50" height="39" loading="lazy" alt="ドコモを長くご利用の方はおトク！">
                         </div>
                         <div class="text">
                           <p class="txt-small">ドコモを長くご利用の方は</p>
@@ -341,12 +340,12 @@
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_04.svg" width="219" height="205" loading="lazy" decoding="async" class="icon icon_04" alt="">
-                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_05.svg" width="280" height="238" loading="lazy" decoding="async" class="icon icon_05" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_04.svg" width="219" height="205" loading="lazy" class="icon icon_04" alt="">
+                  <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_05.svg" width="280" height="238" loading="lazy" class="icon icon_05" alt="">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
@@ -373,7 +372,7 @@
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_02.svg" width="178" height="247" loading="lazy" alt="">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01_sp.jpg" width="708" height="2132">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01.jpg" width="1239" height="791" loading="lazy" decoding="async" alt="ahamoは91の国・地域で海外データ通信が無料だからオトクだね">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_img_01.jpg" width="1239" height="791" loading="lazy" alt="ahamoは91の国・地域で海外データ通信が無料だからオトクだね">
                   </picture>
                   <div class="js-anima-up main_image_desc">
                     <p class="txt">
@@ -393,7 +392,7 @@
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
@@ -425,7 +424,7 @@
                         <p class="title">
                           <picture>
                             <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01_sp.svg" width="372" height="161">
-                            <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" decoding="async" alt="じゃんじゃん使いたい方は ahamo大盛り">
+                            <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_01.svg" width="472" height="187" loading="lazy" alt="じゃんじゃん使いたい方は ahamo大盛り">
                           </picture>
                         </p>
                         <div class="capacity">
@@ -435,7 +434,7 @@
                         <div class="detail_fee">
                           <div class="item item_01">
                             <p class="logo">
-                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_02.svg" width="80" height="30" loading="lazy" decoding="async" alt="ahamo">
+                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_02.svg" width="80" height="30" loading="lazy" alt="ahamo">
                             </p>
                             <div class="cap">
                               <p class="num"><span class="f_roboto">30</span>GB</p>
@@ -450,7 +449,7 @@
                           </span>
                           <div class="item item_02">
                             <p class="logo">
-                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_03.svg" width="146" height="14" loading="lazy" decoding="async" alt="ahamo">
+                              <img src="/special_contents/kokusai/docomo_kokusai/images/tab2_logo_03.svg" width="146" height="14" loading="lazy" alt="ahamo">
                             </p>
                             <div class="cap">
                               <p class="num"><span class="f_roboto">60</span>GB</p>
@@ -469,7 +468,7 @@
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
@@ -491,13 +490,13 @@
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_02.svg" width="185" height="267" loading="lazy" alt="">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01_sp.jpg" width="708" height="2132">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" decoding="async" alt="ドコモ MAX/ドコモポイ活 MAX/ahamo以外でも日本で契約しているプランのデータ量を海外でも使えるので便利!">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" alt="ドコモ MAX/ドコモポイ活 MAX/ahamo以外でも日本で契約しているプランのデータ量を海外でも使えるので便利!">
                   </picture>
                 </div>
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_fee_wrap">
@@ -547,7 +546,7 @@
                 <div class="img_line">
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_line_sp.jpg" width="708" height="40">
-                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" decoding="async" alt="">
+                    <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_line.jpg" width="1240" height="20" loading="lazy" alt="">
                   </picture>
                 </div>
                 <div class="box_footer">
