--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="js-anima-up sec_banner">
-        <a href="#">
+        <a href="https://www.docomo.ne.jp/campaign_event/roaming/index.html?utm_source=dcmkaigai&utm_medium=free-display&utm_campaign=corp_202507_from-dcmkaigai-lp-to-crp-cam-roaming-250711">
           <picture>
             <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/mv_img_02_sp.png" width="750" height="283">
             <img src="/special_contents/kokusai/docomo_kokusai/images/mv_img_02.png" width="1200" height="480" loading="lazy" alt="ポイント 海外データ通信で トクしMAX!" class="c_img_cover">
@@ -66,7 +66,7 @@
 
       <div class="sec_content">
         <div class="c_inner">
-          <div class="js_tab_wrap tab_wrap">
+          <div class="tab_wrap">
             <div class="js-anima-up tab_heading">
               <div class="item is-blue">
                 <p class="text">海外データ通信特典</p>
@@ -94,7 +94,7 @@
   
             <div id="tab1" class="tab_content active">
               <div class="tab_content_01">
-                <div class="js-anima-up main_image">
+                <div class="js-anima-up js_main_image main_image">
                   <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" class="icon icon_01" alt="">
                   <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_02.svg" width="199" height="240" loading="lazy" class="icon icon_02" alt="">
                   <picture>
@@ -119,7 +119,7 @@
                     </p>
                     <p class="txt txt_04">
                       <span>※</span>
-                      一部対象外の地域があります。詳しくはこちらをご確認ください。<br>
+                      <span class="txt_sub">一部対象外の地域があります。詳しくは<a href="#" class="link">こちら</a>をご確認ください。</span>
                     </p>
                     <p class="txt txt_05">
                       <span>※</span>
@@ -367,7 +367,7 @@
             </div>
             <div id="tab2" class="tab_content">
               <div class="tab_content_02">
-                <div class="js-anima-up main_image">
+                <div class="js-anima-up js_main_image main_image">
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_01.svg" width="319" height="181" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_02.svg" width="178" height="247" loading="lazy" alt="">
                   <picture>
@@ -485,9 +485,12 @@
             </div>
             <div id="tab3" class="tab_content">
               <div class="tab_content_03">
-                <div class="js-anima-up main_image">
+                <div class="js-anima-up js_main_image main_image">
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_01.svg" width="295" height="288" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_02.svg" width="185" height="267" loading="lazy" alt="">
+                  <p class="note pc">
+                    ※一部対象外プランあり。適用条件は<a href="https://www.docomo.ne.jp/service/world/roaming/charge/web.html#anc-01" class="note_link">こちら</a>
+                  </p>
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01_sp.jpg" width="708" height="2132">
                     <img src="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01.jpg" width="1239" height="791" loading="lazy" alt="ドコモ MAX/ドコモポイ活 MAX/ahamo以外でも日本で契約しているプランのデータ量を海外でも使えるので便利!">
@@ -538,7 +541,7 @@
                       <span class="txt"><span>※</span>利用期間1時間、24時間は「通常プラン」のみ<br class="sp">対象の国・地域でもご利用になれます。</span>
                       <span class="txt">
                         <span>※</span>
-                        <span class="txt_sub">対象国・地域について詳しくは<br class="sp"><a href="#">「ドコモのホームページ」</a>でご確認ください。</span>
+                        <span class="txt_sub">対象国・地域について詳しくは<br class="sp"><a href="https://www.docomo.ne.jp/service/world/roaming/sonomama-giga/#anc-02">「ドコモのホームページ」</a>でご確認ください。</span>
                       </span>
                     </p>
                   </div>
